testsuite/tests/indexed-types/should_fail/T14230a.stderr
T14230a.hs:14:3: error: [GHC-95424]
    • Type indexes must match class instance head
      Expected: CD (*) (Maybe a)
        Actual: CD (*) a
    • In the associated data family instance declaration for ‘CD’
      In the instance declaration for ‘C (Maybe a)’

